--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Kanji" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/android-chrome-512x512.png"
+    />
     <meta name="theme-color" content="#ffffff" />
 
     <link rel="manifest" href="/site.webmanifest" />
